--- a/css/formulario.css
+++ b/css/formulario.css
@@ -192,3 +192,43 @@ legend {
     justify-content: center;
 
 } 
+
+
+@media screen and (max-width:750px) {
+    .navar ul{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 5rem;
+    }
+
+    .Wrapper{
+        width: 60%;
+        margin: 50px 10px auto;
+    }
+}
+
+@media screen and (max-width: 749px) {
+
+    .navar ul{
+       display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 5rem; 
+    }
+
+    .Wrapper{
+        width: 80%;
+        margin: 50px 10px auto;
+    }
+
+    .rating-container{
+        display: flex;
+        flex-wrap: wrap;
+        gap: 5px;
+        padding: 10px 2px;
+    }
+}
+
