--- a/css/Index.css
+++ b/css/Index.css
@@ -229,6 +229,12 @@ p {
 }
 
 @media (max-width: 920px) {
+    .navar ul{
+        display: flex;
+        flex-direction: column;
+        gap: 10px
+    }
+    
   .container .texto {
     width: 90%;
     text-align: left;
@@ -245,3 +251,4 @@ p {
     font-size: 1.5rem;
   }
 }
+
