--- a/css/formulario.css
+++ b/css/formulario.css
@@ -221,8 +221,8 @@ legend {
 
     .Wrapper{
         width: 95%;
-        margin: 50px 10px auto;
-        height: 85%;
+        margin: 50px 5px auto;
+        height: 920px;
     }
 
     .rating-container{
