--- a/css/formulario.css
+++ b/css/formulario.css
@@ -220,9 +220,9 @@ legend {
     }
 
     .Wrapper{
-        width: 90%;
+        width: 85%;
         margin: 50px 5px auto;
-        height: 85px;
+        height: 80%;
     }
 
     .rating-container{
