--- a/css/formulario.css
+++ b/css/formulario.css
@@ -28,6 +28,9 @@ body {
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 .navar{
@@ -64,11 +67,13 @@ body {
 .Wrapper {
     width: 35%;
     margin: 0 auto;
-    height: 80%;
+    margin-top: 20px;
+    height: 85%;
     background: transparent;
     color: white;
     border-radius: 1rem;
-    padding: 30px 50px; 
+    padding: 0px 50px; 
+    padding-bottom: 20px;
     backdrop-filter: blur(80px);
     position: absolute;
     top: 50%;
@@ -80,7 +85,8 @@ form{
    display: flex;
    flex-direction: column;
    justify-content: center;
-   padding-top: 2rem;
+   padding-top: 1rem;
+
     
 }
 
@@ -193,36 +199,48 @@ legend {
 
 } 
 
-
 @media screen and (max-width:750px) {
     .navar ul{
         display: flex;
-        flex-direction: column;
+        padding: 5px;
         align-items: center;
         justify-content: center;
-        margin-bottom: 5rem;
     }
 
     .Wrapper{
         width: 60%;
-        margin: 50px 10px auto;
+        margin: 10px;
+        height: 100vh;
     }
 }
 
 @media screen and (max-width: 749px) {
+    .navar{
+        width: 100%;
+        margin: 0 auto;
+        padding: 5px;
+        justify-content: center;
+        align-items: center;
+    }
 
     .navar ul{
        display: flex;
-        flex-direction: column;
         align-items: center;
         justify-content: center;
-        margin-bottom: 5rem; 
+
     }
 
     .Wrapper{
-        width: 85%;
-        margin: 50px 5px auto;
-        height: 80%;
+        width: 90%;
+        margin: 10px auto;
+        height: 60%;
+    }
+
+    .Wrapper h1{
+        font-size: 30px;
+    }
+    legend{
+        font-size: 8px;
     }
 
     .rating-container{
@@ -232,4 +250,29 @@ legend {
         padding: 10px 2px;
     }
 }
+
+@media screen and (max-width:667px) {
+    .navar ul{
+        display: flex;
+        justify-content: center;
+    }
+
+    .navar li a{
+        font-size: 15px;
+        
+    }
+
+    .Wrapper{
+        padding: 5px 28px;
+    }
+    .Wrapper .input-box{
+        margin: 10px 0;
+    }
+
+    form legend{
+        margin-top: 10px;
+        font-size: 10px;
+    }
+}
+
 
