--- a/css/pago.css
+++ b/css/pago.css
@@ -95,7 +95,7 @@ background-image: url("C:\Users\Marvi\Downloads\payment gateway\images\tienda-de
   padding:20px;
   width:700px;
   background: #fff;
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .container form .row{
@@ -174,86 +174,107 @@ background-image: url("C:\Users\Marvi\Downloads\payment gateway\images\tienda-de
 }
 
  #mensaje {
-            display: none;
-            color: #044155;
-            font-weight: bold;
-            font-size: 1rem;
-            margin-top: 20px;
-            background: rgba(255,255,255,0.85);
-            padding: 8px 18px;
-            border-radius: 8px;
-            text-align: center;
-            width: fit-content;
-            margin-left: auto;
-            margin-right: auto;
-        }
-
-
-/** Media Queries **/
-@media (max-width: 1024px) {
-    .container {
-        width: 60%;
-        padding: 25px 40px;
-    }
+  display: none;
+  color: #044155;
+  font-weight: bold;
+  font-size: 1rem;
+  margin-top: 20px;
+  background: rgba(255,255,255,0.85);
+  padding: 8px 18px;
+  border-radius: 8px;
+  text-align: center;
+  width: fit-content;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-@media (max-width: 768px) {
-    form {
-        width: 70%;
-        padding: 20px 30px;
+@media screen and (max-width: 768px) {
+    .navar{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 5px;
+      margin: 0 auto; 
+      width: 100%;
     }
 
-    .navar ul {
-        width: 100%;
-        margin: 0 auto;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        gap: 10px;
+    .navar ul{
+      padding: 5px 0;
+      margin: 0;
     }
 
-    .navar li a {
-        font-size: 1rem;
-        padding: 8px 15px;
+    .navar ul li{
+      margin: 0;
+      align-items: center;
+      justify-content: center;
     }
 
-    .inputBox {
-        display:flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 10px;
-        padding: 15px;
-        font-size: 14px;
+    .navar ul li a{
+      font-size: 12px;
     }
+
+
+
+    .container{
+      max-width: 80%;
+      display: flex;
+      flex-direction: column;
+      margin: 0 auto;
+    }
+
+    .container form{
+      padding: 15px;
+      width: 400px;
+      box-shadow: none;
+    }
+
+    .container form .row .col .inputBox span{
+  margin-bottom: 10px;
+  display: flex;
+  flex-direction: column;
 }
 
-@media (max-width: 480px) {
-    form {
-        width: 95%;
-        padding: 15px 20px;
-    }
-
-    .container h1 {
-        font-size: 28px;
-    }
-
-    .rating-container {
-        font-size: 13px;
-        padding: 10px;
-        flex-direction: column;
-    }
-
-    .input-box input,
-    .input-box textarea {
-        font-size: 14px;
-        padding: 15px 20px;
-    }
-
-    .Wrapper .btn {
-        height: 40px;
-        font-size: 15px;
-    }
+.container form .row{
+  display: flex;
+  flex-direction: column;
+  gap: 3px 8px;
 }
 
-    
+.container form .row .col{
+  flex: 1 1 80px
+}
+
+.container form .row .col .title{
+  font-size: 15px;
+  text-align: center;
+}
+
+.container form .row .col .inputBox{
+  margin: 8px 0;
+}
+
+.container form .row .col .inputBox span{
+  font-size: 12px;
+  margin-bottom: 6px;
+  display: flex;
+}
+
+.container form .row .col .inputBox input{
+  padding: 4px 12px;
+}
+
+.container form .row .col .inputBox .inputBox::placeholder{
+  font-size: 10px;
+}
+
+.container form .submit-btn{
+  padding: 8.5px;
+  font-size: 10px;
+}
+
+#mensaje{
+  margin-top: 10px;
+  font-size: 12px;
+  padding: 5px 15px;
+}
+}
