--- a/css/equipo.css
+++ b/css/equipo.css
@@ -82,24 +82,27 @@ h1{
 }
 
 .body {
-    width: 80%;
+    width: 100%;
+    margin: 0 auto;
+    margin-top: 30px;
     height: 600px;
     top: 0;
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-        gap: 10px 18px;
+        gap: 20px;
 }
 
 .profile-card{
     display: flex;
     flex-direction: column;
     align-items: center;
-    max-width: 330px;
+    max-width: 285px;
     width: 100%;
     background-color: #fff;
     border-radius: 24px;
-    padding: 25px;
+    padding: 15px;
     box-shadow: 0 5px 10px rgba(0, 0, 0, .1);
     position: relative;
     transition: .5s ease;
@@ -245,5 +248,5 @@ h1{
     .profile-card:hover{
         transform: scale(1.04);
     }
-
 }
+
