--- a/css/Index.css
+++ b/css/Index.css
@@ -229,15 +229,55 @@ p {
 }
 
 @media (max-width: 920px) {
-    .navar ul{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        gap: 10px
-    }
-    
-  .container .texto {
+
+   .navar{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+   }
+
+   .navar ul{
+    display: flex;
+    flex-direction: column; 
+    gap: 10px;
+    text-align: center;
+   }
+
+   .container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 0;
+    margin:0;
+   }
+  .container .texto h2{
+    width: 100%;
+    margin: 5px;
+    text-align: center;
+    padding: 10px;
+  }
+
+  .container .texto p{
+     width: 100%;
+    margin: 5px;
+    text-align: start;
+    padding: 10px;
+  }
+
+  h2 {
+    font-size: 3rem;
+    text-align: left;
+    margin: 0;
+  }
+
+  p {
+    font-size: 1.5rem;
+  }
+}
+
+@media screen and (max-width: 768px) {
+    .container .texto {
     width: 90%;
     text-align: left;
     padding: 2px;
@@ -253,5 +293,3 @@ p {
     font-size: 1.5rem;
   }
 }
-
-
