--- a/css/pago.css
+++ b/css/pago.css
@@ -153,7 +153,7 @@ background-image: url("C:\Users\Marvi\Downloads\payment gateway\images\tienda-de
 
 .container form .submit-btn{
   width: 100%;
-  height: 100%;
+  height: auto;
   padding:12px;
   font-size: 17px;
   background: var(--clr-main);
